# api/openapi-spec/v3/apis__admissionregistration.k8s.io__v1alpha1_openapi.json
@@ -21,6 +21,26 @@
         ],
         "type": "object"
       },
+      "io.k8s.api.admissionregistration.v1alpha1.MatchCondition": {
+        "description": "MatchCondition represents a condition which must be fulfilled for a request to be sent to a webhook.",
+        "properties": {
+          "expression": {
+            "default": "",
+            "description": "Documentation on CEL: https://kubernetes.io/docs/reference/using-api/cel/\n\nExpression represents the expression which will be evaluated by CEL. ref: https://github.com/google/cel-spec CEL expressions have access to the contents of the AdmissionRequest, organized into CEL variables:\n\n'object' - The object from the incoming request. The value is null for DELETE requests. 'oldObject' - The existing object. The value is null for CREATE requests. 'request' - Attributes of the admission request([ref](/pkg/apis/admission/types.go#AdmissionRequest)).\n\nRequired.",
+            "type": "string"
+          },
+          "name": {
+            "default": "",
+            "description": "Name is an identifier for this match condition, used for strategic merging of MatchConditions, as well as providing an identifier for logging purposes. A good name should be descriptive of the associated expression. Name must be a valid RFC 1123 DNS subdomain, and unique in a set of MatchConditions. Required.",
+            "type": "string"
+          }
+        },
+        "required": [
+          "name",
+          "expression"
+        ],
+        "type": "object"
+      },
       "io.k8s.api.admissionregistration.v1alpha1.MatchResources": {
         "description": "MatchResources decides whether to run the admission control policy on an object based on whether it meets the match criteria. The exclude rules take precedence over include rules (if a resource matches both, it is excluded)",
         "properties": {
@@ -376,6 +396,24 @@
           "failurePolicy": {
             "description": "failurePolicy defines how to handle failures for the admission policy. Failures can occur from CEL expression parse errors, type check errors, runtime errors and invalid or mis-configured policy definitions or bindings.\n\nA policy is invalid if spec.paramKind refers to a non-existent Kind. A binding is invalid if spec.paramRef.name refers to a non-existent resource.\n\nfailurePolicy does not define how validations that evaluate to false are handled.\n\nWhen failurePolicy is set to Fail, ValidatingAdmissionPolicyBinding validationActions define how failures are enforced.\n\nAllowed values are Ignore or Fail. Defaults to Fail.",
             "type": "string"
+          },
+          "matchConditions": {
+            "description": "MatchConditions is a list of conditions on the AdmissionRequest that must be met for a request to be validated. All conditions must be met for the request to be matched. An empty list of matchConditions matches all requests. If there is an error evaluating the condition, the error is ignored and the condition is considered matched.",
+            "items": {
+              "allOf": [
+                {
+                  "$ref": "#/components/schemas/io.k8s.api.admissionregistration.v1alpha1.MatchCondition"
+                }
+              ],
+              "default": {}
+            },
+            "type": "array",
+            "x-kubernetes-list-map-keys": [
+              "name"
+            ],
+            "x-kubernetes-list-type": "map",
+            "x-kubernetes-patch-merge-key": "name",
+            "x-kubernetes-patch-strategy": "merge"
           },
           "matchConstraints": {
             "allOf": [
